# pypara

./: .gitignore  .travis.yml  CHANGELOG.md  ChangeLog  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  default.nix  dev-requirements.txt  mypy.ini  noxfile.py  pyproject.toml  release-please-config.json  setup.cfg  setup.py  tox.ini
.github/workflows/: install-and-test.yml  release.yml  test.yml
docs/source/: conf.py
nix/: sources.json
pypara/: __init__.py  currencies.py  dcc.py  exchange.py  generic.py  monetary.py  xmonetary.py
pypara/accounting/: __init__.py  accounts.py  generic.py  journaling.py  ledger.py
pypara/commons/: errors.py  functional.py  guid.py  numbers.py  others.py  zeitgeist.py
pypara/tests/: test_monetary.py  test_monetary_money.py  test_monetary_price.py  test_xmonetary.py  test_xmonetary_money.py
tests/: test_currencies.py  test_monetary_money.py  test_monetary_price.py
